# MLCondensateDistributions

./: .gitignore  PACKAGE_STRUCTURE_REFACTOR_PLAN.md  Project.toml  README.md  VERTICAL_COARSENING_PLAN.md  dataset_spec.md
MLCondensateDistributions.jl/: Manifest.toml  Project.toml
data/: README.md
docs/: COARSENING_REDUCTION_IMPLEMENTATION_PLAN.md  TABULAR_REDUCTION_SCHEDULE_SPEC.md  googleles_build_tabular.md
ext/: CairoMakieExt.jl
python/: README.md  dataset.py  environment.yml  pyproject.toml  train.py
python/MLCondensateDistributions/: __init__.py  dataset.py  model.py  train.py
scripts/: googleles_variance_numerics_one_timestep.jl  variance_numerics_proof.jl  write_googleles_arrow_sample.jl
src/: MLCondensateDistributions.jl  NN_Condensate_Distributions.jl  models.jl
test/: Project.toml  runtests.jl  test_array_utils.jl  test_build_training_data.jl  test_coarsening_pipeline.jl  test_data_handling.jl  test_data_hygiene.jl  test_dataset_builder.jl  test_dataset_builder_impl.jl  test_dynamics.jl  test_full_pipeline.jl  test_googleles.jl  test_googleles.py  test_googleles_nonqc_strategy.jl  test_googleles_z_chunk_grouping.jl  test_reduction_specs.jl
utils/: GoogleLES.jl  GoogleLES.py  README.md  RESOLUTION_COARSENING_BUG.md  analysis.jl  array_utils.jl  build_training_common.jl  build_training_data.jl  cfSites.jl  coarse_graining.jl  coarsening_pipeline.jl  common.jl  data_handling.jl  dataloader.jl  dataset_builder.jl  dataset_builder_impl.jl  dynamics.jl  env_helpers.jl  my_array_utils.jl  reduction_specs.jl  train_lux.jl  workflow_state.jl
(+115 files in other folders)
