[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcondensate-distributions"
version = "0.1.0"
description = "Parquet-first data loading, training, and diagnostics for condensate models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "torch>=2.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["MLCondensateDistributions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
